# esp-mcp-server

./: CMakeLists.txt  LICENSE  README.md  README_CN.md  SUMMARY.md  idf_component.yml
examples/simple/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/simple/main/: Kconfig.projbuild  app_main.c  idf_component.yml
include/: esp_mcp_server.h  schema_validator.h
src/: esp_mcp_server.c  json_rpc.c  schema_validator.c  uri_template.c
src/priv_includes/: json_rpc.h  uri_template.h
